...
                          key: const Key('sign-in-with-facebook'),
                          onTap: () => context.read<LoginCubit>().signInWithFacebook(),
                          label: LocaleKeys.sign_in_with_facebook.tr(),
                          iconPath: AppConstants.facebookIcon,
                        ),
                        _LoginButton(
                          key: const Key('sign-in-with-google'),
                          onTap: () => context.read<LoginCubit>().signInWithGoogle(),
                          label: LocaleKeys.sign_in_with_google.tr(),
                          iconPath: AppConstants.googleIcon,
                        ),
                        TextButton(
                          key: const Key('sign-in-anonymously'),
                          onPressed: () => context.read<LoginCubit>().signInAnonymously(),
                          child: Text(
                            LocaleKeys.sign_in_with_anonymously.tr(),
                            style: context.theme.textTheme.bodySmall?.copyWith(color: context.theme.primaryColor),
                          ),
                        ),
...
